# qmmd

./: .agent.md  .gitignore  .prompt.md  .readthedocs.yml  .skill.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  dependabot-automating.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/covdrugsim/: __init__.py  main.py
src/covdrugsim/mdsim/: SCbondDist.py  baseID.py  bbRMSD.py  hbondAnalysis.py  ligDihedral.py  mdAnalyse.py  prepMTB.py
src/covdrugsim/qmcalc/: admin.py  genScripts.py  tabulate.py
src/covdrugsim/qmcalc/visAnalysis/: energyLeveller.py  plotFigs.py
src/qmmd/: __init__.py  datasets.py  main.py
src/qmmd/mdsim/: SCbondDist.py  baseID.py  bbRMSD.py  config.py  hbondAnalysis.py  ligDihedral.py
src/qmmd/qmcalc/: admin.py  genScripts.py  jobSubmit.py  tabulate.py  unitConv.py
src/qmmd/qmcalc/visAnalysis/: plotConfig.py  plotFigs.py
tests/: test_covdrugsim.py  test_qmmd.py  test_tabulate.py
