[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covdrugsim"
version = "1.0.22"
description = "Package to automate quantum mechanical calculations and molecular dynamics simulations of covalent drugs."
authors = [
    { name = "Jonathan Yik Chang Ting", email = "jonting97@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["covalent", "drug", "quantum", "mechanic", "molecular", "dynamics", "simulation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.25.0",
    "pandas>=2.0.2",
    "seaborn>=0.12.2",
    "scipy>=1.10.0",
    "xlsxwriter>=3.1.2",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/Jon-Ting/covdrugsim"
Repository = "https://github.com/Jon-Ting/covdrugsim"
Documentation = "https://covdrugsim.readthedocs.io/en/latest/"

[project.scripts]
covdrugsim = "covdrugsim.main:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "myst-nb>=0.17.2",
    "sphinx-autoapi>=2.1.1",
    "sphinx-rtd-theme>=1.2.2",
    "python-semantic-release>=9.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "W", "I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
